--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
 }
 
 body {
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
   background-color: white;
   color: #1f2937;
 }
