--- a/style.css
+++ b/style.css
@@ -89,3 +89,28 @@ h2 {
   border-radius: 6px;
   margin-top: 18px;
 }
+
+.card-container {
+  display: flex;
+  gap: 24px;
+  padding: 32px 0 48px;
+  max-width: 800px;
+  margin-inline: auto;
+}
+
+.card {
+  max-width: 25%;
+}
+
+.card div {
+  width: 100%;
+  padding-bottom: 100%;
+  border-radius: 8px;
+  border: 3px solid #3882f6;
+  margin-bottom: 8px;
+}
+
+.card span {
+  text-align: center;
+  display: block;
+}
